# Raptor

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  LICENSE.md  README.md  build.fish  build.sh  cli.fish  qemu.sh
cmake/: profile.cmake  toolchain.cmake
filesystem/boot/grub/: grub.cfg
filesystem/cmake/: fsbuild.cmake  fslayer.cmake  kernel.cmake  version.cmake
host/: CMakeLists.txt
kernel/: arch.h  cmdline.c  cmdline.h  common.h  cpu.h  entry..h  entry.c  entry.h  heap.h  identity.h  interupt.h  kexec.h  modload.h  paging.h  panic.c  panic.h  rootfs.c  rootfs.h  spin.c  spin.h  syscall.c  syscall.h  time.h  timer.c  timer.h  tty.c  tty.h  version.h
kernel/arch/arm/common/: arch.h  mmio.s  time.c
kernel/arch/arm/rpi/: board.h  board.s  boot.s  delay.c  delay.h  entry.c  exception.c  exception.h  exception.s  fb.c  fb.h  gpio.c  gpio.h  heap.c  irq.c  irq.h  kexec.c  mmio.c  (+7 more)
kernel/arch/generic/: nommu.h  nosched.h  nouser.h
kernel/arch/user/: arch.cmake  arch.h  debug.c  debug.h  entry-linux.c  entry.c  env-unix.c  env-windows.c  env.c  env.h
kernel/arch/x86/: arch-x86.h  arch.h  boot.s  cmdline.c  cmdline.h  cmos.c  cpu.c  cpuid.c  cpuid.h  debug.c  debug.h  elf32load.c  elf32load.h  entry.c  gdt.c  gdt.h  heap.c  heap.h  idt.c  idt.h  io.c  io.h  irq.c  irq.h  irq.s  isr.c  isr.h  isr.s  keyboard.c  keyboard.h  linker-llvm.ld  linker.ld  modload.c  multiboot.h  ordered_array.c  ordered_array.h  paging.c  paging.h  pci_init.c  pci_init.h  (+15 more)
kernel/arm/: flags.cmake
kernel/arm/rpi/: kernel.c
kernel/binfmt/: elf32.c  elf32.h
kernel/cpu/: idle.h  task.c  task.h
kernel/crypto/: crc32.c  crc32.h
kernel/debug/: cmdline.c  commands.c  commands.h  console.c  console.h  devices.c  disk.c  fs.c  kheap.c  network.c  power.c  time.c  ubsan.c  ubsan.h
kernel/device/: driver.c  driver.h  registry.c  registry.h  types.h
kernel/devices/pci/: pci.c  pci_list.h
kernel/devices/pcspkr/: pcspkr.c
kernel/disk/: block.c  block.h  disk.c  disk.h  mbr.c  mbr.h  nulldev.c  nulldev.h
kernel/dispatch/: event.h  events.c  events.h  mailbox.c  mailbox.h  pipe.c  pipe.h
kernel/fs/: embdfs.c  embdfs.h  ext2.c  ext2.h  fat32.c  fat32.h  filesystems.c  filesystems.h  vfs.c  vfs.h
kernel/graphics/: fb.c  fb.h
kernel/input/: events.h  input.c  input.h
kernel/network/: arp.h  dhcp.c  dhcp.h  ethernet.c  ethernet.h  icmp.c  icmp.h  iface.c  iface.h  ip.c  ip.h  stack.c  stack.h  udp.c  udp.h
kernel/network/ifhub/: ifhub.c  ifhub.h  log.h
kernel/network/stack/: arp.c  arp.h  config.c  config.h  dhcp.c  dhcp.h  ethernet.c  ethernet.h  icmp.c  icmp.h  log.h  route.c  route.h  stack.c  stack.h
kernel/pm/: pm.h
kernel/process/: process.c  process.h  scheduler.c  scheduler.h
kernel/rkmalloc/: klist.c  klist.h  rkmalloc.c  rkmalloc.h
kernel/scheduler/: scheduler.h
kernel/syscall/: loxcall.c  table.c  table.h
kernel/syscall/lox/: loxcall.c  loxcall.h
kernel/tty/: tty.c  tty.h
kernel/usb/: controller.h  device.h
kernel/usb/protocol/: desc.h
kernel/util/: rand.c  rand.h
kernel/x86/: boot.s  entry.c  gdt.c  gdt.h  heap.c  idt.c  idt.h  io.c  irq.c  irq.h  isr.c  isr.h  isr.s  keyboard.c  keyboard.h  linker.ld  paging.h  timer.h  tty.c  tty.h  vga.c  vga.h  x86.h
libc/: itoa.c  string.h  strlen.c
libfuel/: itoa.c  reverse.c
liblox/: abort.c  abort.h  alias.h  atomic.h  bitset.c  bitset.h  common.h  ctypes.h  hashmap.c  hashmap.h  hex.c  hex.h  io.c  io.h  itoa.c  kcommon.h  list.c  list.h  lox-internal.c  lox-internal.h  memchr.c  memcmp.c  memcpy.c  memory.c  memory.h  memset.c  net.c  net.h  printf.c  printf.h  reverse.c  sleep.c  sleep.h  strchr.c  strchrnul.c  strcmp.c  strcspn.c  strdup.c  string.h  strlen.c  (+8 more)
liblox/arch/arm/: aebi.c
liblox/binfmt/: elf32.h  pe32.h
liblox/core/: abort.c  ctypes.c  sleep.c  syscall.c
liblox/data/: bitset.c  hashmap.c  list.c  tree.c
liblox/debug/: backtrace.c  backtrace.h  stack_check.c  ubsan.c
liblox/env/: env.c  env.h
liblox/graphics/: color.c  color.h  colors.c  colors.h  pen.c  pen.h
liblox/ini/: ini.c  ini.h
liblox/io/: io.c
liblox/json/: jsmn.c  jsmn.h
liblox/memory/: memchr.c  memcmp.c  memcpy.c  memory.c  memset.c
liblox/network/: net.c
liblox/strbuf/: strbuf.c  strbuf.h
liblox/string/: atoi.c  hex.c  itoa.c  memccpy.c  memchr.c  memcmp.c  memcpy.c  memmem.c  memmove.c  memset.c  printf.c  reverse.c  stpcpy.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strcpy.c  strcspn.c  strdelcat.c  strdup.c  strlen.c  strncpy.c  strnlen.c  strspn.c  strstr.c  strtok.c  strtol.c
tests/lox/: CMakeLists.txt  lox_impl.c  test_jsmn.c  test_json_tokenizer.c  test_list.c  test_list_preallocate.c
tests/lox/helper/: test.c  test.h
userspace/: CMakeLists.txt
userspace/internal/: CMakeLists.txt  crt0.c
userspace/internal/arch/generic/: syscall.c
userspace/internal/arch/x86/: start.s  syscall.c
userspace/internal/arch/x86_64/: syscall.c
(+68 files in other folders)
